--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,31 +2,27 @@ name: AI Shorts Automation
 
 on:
   schedule:
-    - cron: "0 */5 * * *"   # हर 5 घंटे चलेगा
-  workflow_dispatch:         # Manual run ka option bhi hoga
+    - cron: "0 */5 * * *"   # Har 5 ghante
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Code checkout
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      # 2️⃣ Python setup
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
 
-      # 3️⃣ Dependencies install
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install yt-dlp moviepy google-api-python-client google-auth google-auth-oauthlib google-generativeai requests
-      # 4️⃣ Setup secrets
+
       - name: Setup secrets
         run: |
           echo "${{ secrets.TOKEN_JSON }}" > token.json
@@ -34,10 +30,9 @@ jobs:
           HF_API_TOKEN: ${{ secrets.HF_API_TOKEN }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
 
-      # 5️⃣ Run pipeline
-      - name: Run AI Shorts pipeline
+      - name: Run pipeline
         run: python main.py
         env:
           HF_API_TOKEN: ${{ secrets.HF_API_TOKEN }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-          TOKEN_JSON: ${{ secrets.TOKEN_JSON }}
+          
