--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,23 +10,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # ✅ Checkout with pinned SHA
+      # Step 1: Checks out your repository's code
       - name: Checkout repository
-        uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4.1.7
+        uses: actions/checkout@v4
 
-      # ✅ Setup Python with pinned SHA
+      # Step 2: Sets up the Python version
       - name: Set up Python
-        uses: actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d # v4.7.1
+        uses: actions/setup-python@v4
         with:
           python-version: "3.11"
 
-      # ✅ Install dependencies
+      # Step 3: Installs the latest versions of all required libraries
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install --upgrade google-genai moviepy google-api-python-client google-auth-oauthlib requests
 
-      # ✅ Run main.py
+      # Step 4: Runs your main Python script with secrets
       - name: Run script
         env:
           HF_API_TOKEN: ${{ secrets.HF_API_TOKEN }}
