--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,23 +10,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checks out your repository's code
+      # ✅ Checkout with pinned SHA
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4.1.7
 
-      # Step 2: Sets up the Python version
+      # ✅ Setup Python with pinned SHA
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d # v4.7.1
         with:
           python-version: "3.11"
 
-      # Step 3: Installs the latest versions of all required libraries
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install --upgrade google-genai moviepy google-api-python-client google-auth-oauthlib requests
+      # ✅ Install dependencies
+      - name: Install Dependencies
+  run: |
+    python -m pip install --upgrade pip
+    pip install --upgrade google-genai moviepy google-api-python-client google-auth-oauthlib
+    
 
-      # Step 4: Runs your main Python script with secrets
+      # ✅ Run main.py
       - name: Run script
         env:
           HF_API_TOKEN: ${{ secrets.HF_API_TOKEN }}
