--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,8 @@ jobs:
 
       # ✅ Install dependencies
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+  run: pip install --no-cache-dir --upgrade -r requirements.txt
+  
       # ✅ Run main.py
       - name: Run script
         env:
