--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,19 +9,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # ✅ Checkout repository
+      # FIX: Changed back to full commit SHA to match security policy
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # Pinned to a specific version
 
-      # ✅ Setup Python
+      # FIX: Changed back to full commit SHA to match security policy
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d # Pinned to a specific version
         with:
           python-version: "3.11"
 
       # ✅ Install dependencies
       - name: Install dependencies
-        # FIX: Corrected the indentation of the 'run' command
         run: pip install --no-cache-dir --upgrade -r requirements.txt
   
       # ✅ Run main.py
